# apps-script-samples

./: .eslintignore  .eslintrc.js  .gitignore  .travis.yml  About.html  AuthorizationEmail.html  CNAME  CONTRIB.md  CONTRIBUTING.md  Code.gs  CreatorNotification.html  Dialog.html  GEMINI.md  LICENSE  README.md  RespondentNotification.html  SECURITY.md  Sidebar.html  biome.json  package-lock.json  package.json  packaging.yaml  pnpm-lock.yaml  pnpm-workspace.yaml  toyota fortuner 2024  tsconfig.json
.gemini/: GEMINI.md  config.yaml  settings.json
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  pull_request_template.md  snippet-bot.yml  sync-repo-settings.yaml
advanced/: README.md  Syntax error: SyntaxError: Unexpected token '<' line: 4 file: Code.gs  adminSDK.gs  adsense.gs  analytics.gs  analyticsAdmin.gs  analyticsData.gs  apps-activity.gs  appsActivity.gs  bigquery.gs  calendar.gs  calendar_telegram.gs  chat.gs  classroom.gs  displayvideo.gs  docs.gs  doubleclick.gs  doubleclickbidmanager.gs  drive.gs  driveActivity.gs  driveLabels.gs  events.gs  fusionTables.gs  gmail.gs  googlePlus.gs  googlePlusDomains.gs  iot.gs  mirror.gs  people.gs  prediction.gs  sheets.gs  shopping-content.gs  shoppingContent.gs  slides.gs  tagManager.gs  tasks.gs  test_adminSDK.gs  test_adsense.gs  test_analytics.gs  test_bigquery.gs  (+22 more)
android/: AndroidManifest.xml  MyAddOnActivity.java  README.md
bibstro/: README.markdown  bibstrategy.gs  citationdialog.html  citationdialog_js.html  common.gs  configdialog.html  configdialog_js.html  controller.gs  datastore.gs  documentmodel.gs  events.gs  managereferencessidebar.html  managereferencessidebar_js.html  referencedialog.html  referencedialog_js.html
calendar/: README.md
cursor_inspector/: Code.gs  README.md  Sidebar.html  Sidebar.js.html
custom-functions/: Code.gs  README.md
data-studio/: appsscript.json  appsscript2.json  auth.gs  build.gs  caas.gs  data-source.gs  errors.gs  links.gs  semantics.gs
date_add_and_subtract/: Code.gs  README.md
docs/: README.md
docs-addon/: Code.gs  Dialog.html  DialogJavaScript.html  README.md  Sidebar.html  SidebarJavaScript.html  Stylesheet.html
forms/: README.md
forms-addon/: Code.gs  Dialog.html  DialogJavaScript.html  Sidebar.html  SidebarJavaScript.html  Stylesheet.html
fulllink-website/: next.config.ts  package.json  tailwind.config.ts
gmail/: README.md
gmail-sentiment-analysis/: .clasp.json  Cards.gs  Code.gs  Gmail.gs  README.md  Samples.gs  Vertex.gs  appsscript.json
import_export_development/: .gitignore  README  README.md  gulpfile.js  package.json
mashups/: sheets2calendar.gs  sheets2chat.gs  sheets2contacts.gs  sheets2docs.gs  sheets2drive.gs  sheets2forms.gs  sheets2gmail.gs  sheets2maps.gs  sheets2slides.gs  sheets2translate.gs
picker/: README.md  appsscript.json  code.gs  dialog.html
wasm/image-add-on/: .clasp.json  Cargo.toml  build.js  package-lock.json  package.json
wasm/image-add-on/src/: add-on.js  appsscript.json  lib.rs  main.js  test.js  wasm.js
wasm/python/: .clasp.json  .gitattributes  Cargo.toml  build.js  package-lock.json  package.json
wasm/python/src/: appsscript.json  lib.rs  main.js  test.js  wasm.js
(+504 files in other folders)
