# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "example"
version = "0.1.0"
edition = "2021"
rust-version = "1.57"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22.0"
console_error_panic_hook = "0.1.7"
image = {version = "0.24.9", features = ["jpeg"]}
js-sys = "0.3.69"
wasm-bindgen = { version = "0.2.91", features = [] }

[dev-dependencies]
wasm-bindgen-cli = "0.2.91"

[profile.release]
opt-level = 's'
